k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: secureai-platform
  namespace: default
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: secureai-platform
